test/corpus/statements.txt
===
string statement
===

a_key: "some string"

---

(object
  (statement
      (key)
      (string)))


===
bool statement
===

some_yes: yes
some_no: no
some_true: true
some_false: false

---

(object
  (statement
      (key)
      (bool))
  (statement
      (key)
      (bool))
  (statement
      (key)
      (bool))
  (statement
      (key)
      (bool)))


===
number statement
===

some_number1: 123
some_number2: 1.23
some_number3: .23

---

(object
  (statement
      (key)
      (number))
  (statement
      (key)
      (number))
  (statement
      (key)
      (number)))


===
block statement
===

some_block: {
  some_string: "this is some string"
  some_bool: yes
  some_number: 123.123
}

---

(object
  (statement
    (key)
    (block
      (object
        (statement
          (key)
          (string))
        (statement
          (key)
          (bool))
        (statement
          (key)
          (number))))))

===
nested block statement
===

some_block: {
  some_nested_block: {
    has_value: yes
  }
}

---

(object
  (statement
    (key)
    (block
      (object
        (statement
          (key)
          (block
            (object
              (statement
                (key)
                (bool)))))))))

===
named block statement
===

some_block: some_name {
  has_value: yes
}

---

(object
  (statement
    (key)
    (block
      (named_block
        (object
          (statement
            (key)
            (bool)))))))
